syntax = "proto3";
package point;

message Point {
    double x = 1;
    double y = 2;
}

service PointStorage { 
    rpc Create(CreateRequest) returns (CreateResponse); 
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message CreateRequest { Point point = 2; }
message ReadRequest { uint64 id = 1; }
message UpdateRequest { uint64 id = 1; Point point = 2; }
message DeleteRequest { uint64 id = 1; }

message CreateResponse { uint64 id = 1; }
message ReadResponse { Point point = 2; }
message UpdateResponse { }
message DeleteResponse { }



